--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
   <link rel="manifest" href="/site.webmanifest">
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
 
+  <link rel="manifest" href="https://app.vleveque.com/webmanifest.json" />
   <meta name="msapplication-TileColor" content="#262a32" />
   <meta name="theme-color" content="#262a32" />
 </head>
