fix: user update + transitions

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -15,7 +15,7 @@
   <meta name="theme-color" content="#262a32" />
 </head>
 
-<body class="">
+<body class="" style="max-height:100vh">
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
 </body>
